--- a/_om-oss-style.scss
+++ b/_om-oss-style.scss
@@ -1,56 +1,83 @@
-
-.main-content {
-    padding: 20px;
+.team{
+	width: 100%;
+	height: 100vh;
+}
+.team-content{
+    border: 1px solid black;
+	width: 100%;
+	margin: auto;
+    padding: auto;
+	display: flex;
+    flex-direction: column;
+	align-items: center;
+	gap: 2rem;
+	text-align: center;
+	margin-top: 4rem;
+}
+.team-content img{
+	width: 100%;
+	height: auto;
+	border-radius: 15px;
+	margin-bottom: 15px;
+}
+.center h1{
+	color: #0a0a0a;
+	font-size: 1.5rem;
+	text-align: center;
+}
+.box{
+    width: 80%;
+    max-width: 200px;
+    height: 200px;
+	padding: 16px;
+	background-color: red;
+	border-radius: 15px;
+	transition: all .38s ease;
+}
+.box h3{
+	font-size: 23px;
+	font-weight: 300;
+	color: #fff;
+	margin-bottom: 8px;
+}
+.box h5{
+	font-size: 15px;
+	font-weight: 200;
+	color: #6d6c6f;
+	margin-bottom: 15px;
+	letter-spacing: 2px;
 }
 
-.about-history, .company-motto, .employees {
-    margin-bottom: 20px;
+
+.box:hover{
+	transform: translateY(-10px);
+	cursor: pointer;
 }
 
-h1 {
-    font-size: 24px;
-    margin-bottom: 10px;
-}
+@media(min-width: 768px){
+	.team{
+        border: 1px solid blue;
+		width: 100%;
+		height: auto;
 
-.employee {
-    margin-bottom: 20px;
-}
-
-img {
-    max-width: 100%;
-    border-radius: 50%;
-}
-
-/* Add media queries for responsiveness */
-@media screen and (max-width: 768px) {
-    .menu-toggle {
-        display: block;
-    }
-
-    .nav ul {
-        display: none;
-        flex-direction: column;
-        background-color: #333;
-        position: absolute;
-        top: 45px;
-        left: 0;
-        width: 100%;
-        text-align: center;
-    }
-
-    .nav ul.active {
-        display: flex;
-    }
-
-    .nav ul li {
-        margin: 10px 0;
-    }
-}
+        .team-content {
+            width: 70%;
+            flex-direction: row;
+            justify-content: space-around;
+            flex-wrap: wrap;
+          
+            gap: 10px;
+            
+           .box{
+            background-color: red;
+            min-width: 100px;
 
 
-@media screen and (min-width: 768px){
-   body{
-    background-color: red;
-
-   } 
+            }
+         }
+		
+	}
+	.center h1{
+		font-size: 3.2rem;
+	}
 }
