--- a/_om-oss-style.scss
+++ b/_om-oss-style.scss
@@ -3,7 +3,7 @@
 	height: 100vh;
 }
 .team-content{
-    border: 1px solid black;
+    
 	width: 100%;
 	margin: auto;
     padding: auto;
@@ -15,10 +15,10 @@
 	margin-top: 4rem;
 }
 .team-content img{
-	width: 100%;
+	width: 60%;
 	height: auto;
-	border-radius: 15px;
-	margin-bottom: 15px;
+	border-radius: 100px;
+	margin-bottom: 5px;
 }
 .center h1{
 	color: #0a0a0a;
@@ -30,7 +30,7 @@
     max-width: 200px;
     height: 200px;
 	padding: 16px;
-	background-color: red;
+	background-color: rgb(181, 177, 177);
 	border-radius: 15px;
 	transition: all .38s ease;
 }
@@ -69,7 +69,7 @@
             gap: 10px;
             
            .box{
-            background-color: red;
+            
             min-width: 100px;
 
 
