--- a/style.scss
+++ b/style.scss
@@ -213,8 +213,7 @@ nav {
     
 
     .service {
-      border: 1px solid $font-color-1;
-
+      background-color: $color-2;
       border-radius: 20px;
       padding: 20px;
       margin: 10px auto;
@@ -223,24 +222,37 @@ nav {
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      
-    
-      
-
+      gap:3px;
       @include button-Style();
 
       img{
-        max-width: 50px;
+        max-width: 140px;
         
       }
     
       h2{
         margin-bottom: 5px;
-        font-size: 0.9rem;
+        font-size: 1rem;
       }
       p{
         text-align: left;
-        font-size: 0.4rem;
+        font-size: 0.8rem;
+        color: #444040;
+      }
+      button{
+        background-color:rgb(207, 66, 207);
+        border: none;
+        border-radius: 10px;
+        padding: 10px;
+        width:130px;
+        @include button-Style();
+        margin-top: 10px;
+
+        font-size:0.9rem;
+        color: #fff;
+        
+    
+
       }
     }
   }
@@ -359,8 +371,6 @@ footer{
   
   .service-section {
     width: 80%;
-   
-    
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -370,9 +380,9 @@ footer{
    
 
     .service{
-      max-width: 300px;
-      min-width:300px;
-      
+     
+      max-width:300px;
+     
 
       p{
         font-size: 0.8rem;
