--- a/style.css
+++ b/style.css
@@ -435,34 +435,31 @@ body {
   text-align: center;
   align-items: center;
   display: flex;
-  border: 1px solid black;
+  flex-direction: column;
+  padding-top: 40px;
+  height: 100vh;
+}
+.om-oss .om-oss-title p {
+  color: rgba(0, 0, 0, 0.838);
+  font-size: 1.7rem;
+  text-align: center;
+  padding: 6px;
 }
 .om-oss .om-oss-wrapper {
-  border: 1px solid black;
-  height: 100vh;
   display: flex;
   flex-direction: column;
   align-content: center;
   justify-content: center;
   gap: 10px;
 }
-.om-oss .om-oss-wrapper .om-oss-title {
-  text-align: center;
-  font-family: sans-serif;
-}
-.om-oss .om-oss-wrapper .om-oss-title p {
-  color: rgba(0, 0, 0, 0.838);
-  font-size: 2rem;
-  text-align: center;
-  padding: 6px;
-}
 .om-oss .om-oss-wrapper .om-oss-img img {
   width: 60%;
-  max-width: 400px;
+  max-width: 900px;
   border-radius: 100px;
 }
 .om-oss .om-oss-wrapper .om-oss-text {
   width: 70%;
+  max-width: 800px;
   margin: 0 auto;
 }
 .om-oss .om-oss-wrapper .om-oss-text p {
@@ -505,7 +502,7 @@ body {
   color: #444040;
 }
 .service-section .service button {
-  background-color: rgb(207, 66, 207);
+  background-color: rgb(176, 136, 202);
   border: none;
   border-radius: 10px;
   padding: 10px;
@@ -610,37 +607,28 @@ footer .text-footer {
   .service-section img {
     max-width: 100%;
   }
-  .om-oss {
-    flex-direction: row;
-    justify-content: space-around;
-    align-content: center;
-    align-items: center;
+  .om-oss .om-oss-title {
+    text-align: center;
   }
   .om-oss .om-oss-wrapper {
-    margin: 0 auto;
-    padding: 60px;
-    position: relative;
+    padding: 10px;
+    align-content: center;
+    margin: auto;
     flex-direction: row;
     justify-content: space-around;
   }
-  .om-oss .om-oss-wrapper .om-oss-title {
-    position: absolute;
-    top: 60px;
-  }
   .om-oss .om-oss-wrapper .om-oss-img {
-    min-width: 600px;
-    padding: 0px auto;
+    width: 70%;
+    max-width: 700px;
     margin: auto;
   }
   .om-oss .om-oss-wrapper .om-oss-text {
-    min-width: 500px;
+    width: 70%;
+    max-width: 500px;
     text-align: center;
-    padding: 20px;
-    max-width: 400px;
-    margin-top: 130px;
+    margin: auto;
   }
   .om-oss .om-oss-wrapper .om-oss-text p {
-    font-size: 1.2rem;
-    padding: 10px;
+    font-size: 1rem;
   }
 }/*# sourceMappingURL=style.css.map */
