--- a/_om-oss-style.scss
+++ b/_om-oss-style.scss
@@ -12,7 +12,7 @@
 	align-items: center;
 	gap: 2rem;
 	text-align: center;
-	margin-top: 4rem;
+	
 }
 .team-content img{
 	width: 60%;
@@ -20,32 +20,30 @@
 	border-radius: 100px;
 	margin-bottom: 5px;
 }
-.center h1{
-	color: #0a0a0a;
-	font-size: 1.5rem;
-	text-align: center;
-}
+
 .box{
     width: 80%;
-    max-width: 200px;
-    height: 200px;
+    max-width: 300px;
+    
 	padding: 16px;
-	background-color: rgb(181, 177, 177);
-	border-radius: 15px;
+	background-color:rgba(176, 136, 202, 0.176);
+	border-radius: 30px;
 	transition: all .38s ease;
 }
 .box h3{
 	font-size: 23px;
+	
 	font-weight: 300;
-	color: #fff;
+	color: #0f0f0f;
 	margin-bottom: 8px;
 }
 .box h5{
+	
 	font-size: 15px;
-	font-weight: 200;
-	color: #6d6c6f;
+	font-weight: 400;
+	color: #000000;
 	margin-bottom: 15px;
-	letter-spacing: 2px;
+	
 }
 
 
@@ -56,16 +54,15 @@
 
 @media(min-width: 768px){
 	.team{
-        border: 1px solid blue;
+       
 		width: 100%;
 		height: auto;
 
         .team-content {
-            width: 70%;
+            width: 80%;
             flex-direction: row;
             justify-content: space-around;
             flex-wrap: wrap;
-          
             gap: 10px;
             
            .box{
