--- a/style.scss
+++ b/style.scss
@@ -285,8 +285,7 @@ nav {
   
 
 footer{
-  background-color: darkgray;
-  
+  background-color: rgb(95, 94, 94);
   height:200px;
 
 
@@ -296,7 +295,7 @@ footer{
     width: 100%;
     justify-content: space-around;
     margin: auto;
-    padding:10px;
+    padding-top:30px;
     padding-left: 40px;
     
 
@@ -313,8 +312,6 @@ footer{
     .undersidan-footer{
      
       margin-top: 5px;
-      
-      
       
 
       ul{
