--- a/_kontakt-style.scss
+++ b/_kontakt-style.scss
@@ -5,17 +5,18 @@
 
 .container-form{
 
-  width: 70%;
+  width: 100%;
   margin: 30px auto;
-  
+  padding:30px;
   display: flex;
   flex-direction: column;
 
+ 
+
   .text-form-wrapper{
-    margin: auto;
     
-    width: 90%;
-    height: 100vh;
+    border: 1px solid yellow;
+    margin: auto;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -34,15 +35,17 @@
     img{
         width:70%;
         max-width: 400px;
+        border-radius: 100px;
         
     }
    
 
     .content-text{
       padding: 10px 20px;
+      max-width: 600px;
      
       p{
-        
+
       
         .bold{
           font-size: 1.2rem;
@@ -55,13 +58,14 @@
 
 .contact-form {
   
-  background-color: #ffffff;
+  background-color: rgb(254,204,1);
   border-radius: 10px;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
-  width: 100%;
+  
+  width: 80%;
   max-width: 400px;
   padding: 30px;
   text-align: center;
+  margin-top:20px;
 }
 
 .contact-form h2 {
@@ -86,6 +90,7 @@
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
+ 
 }
 
 .form-group textarea {
@@ -95,7 +100,7 @@
 button {
   width: 100%;
   padding: 10px;
-  background-color: #007bff;
+  background-color: $color-1;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -104,16 +109,29 @@ button {
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: $color-2;
 }
 }
 
 @media screen and (min-width: 768px) {
   .container-form{
     flex-direction: row;
+    border: 1px solid red;
+    
+
+    .text-form-wrapper{
+      
+      width: 100%;
+      img{
+        max-width:200px;
+      }
+      .content-text{
+        max-width: 200px;
+      }
+    }
    
   .contact-form {
-      width: 80%;
+      width: 50%;
       
   }
 }
