--- a/_om-oss-style.scss
+++ b/_om-oss-style.scss
@@ -1,6 +1,8 @@
 .team{
 	width: 100%;
-	height: 100vh;
+	
+	margin-top: 70px;
+	margin-bottom: 50px;
 }
 .team-content{
     
@@ -24,19 +26,12 @@
 .box{
     width: 80%;
     max-width: 300px;
-    
 	padding: 16px;
-	background-color:rgba(176, 136, 202, 0.176);
+	background-color:rgba(12, 204, 204, 0.395);
 	border-radius: 30px;
 	transition: all .38s ease;
 }
-.box h3{
-	font-size: 23px;
-	
-	font-weight: 300;
-	color: #0f0f0f;
-	margin-bottom: 8px;
-}
+
 .box h5{
 	
 	font-size: 15px;
