--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ header .content-nav {
   display: flex;
   justify-content: space-between;
 }
+header .content-nav .logo img {
+  width: 100px;
+}
 header .content-nav .logo:hover {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
@@ -21,6 +24,9 @@ header .content-nav .toggler {
 header .content-nav .toggler button {
   background-color: transparent;
   border: none;
+}
+header .content-nav .toggler button img {
+  width: 35px;
 }
 header .content-nav .toggler button:hover {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -56,7 +62,6 @@ header nav ul:hover :hover {
   flex-direction: column;
 }
 .container-form .text-form-wrapper {
-  border: 1px solid yellow;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -82,8 +87,9 @@ header nav ul:hover :hover {
   font-family: sans-serif;
 }
 .container-form .contact-form {
-  background-color: rgb(254, 204, 1);
+  background-color: rgba(254, 203, 1, 0.555);
   border-radius: 10px;
+  margin: auto;
   width: 80%;
   max-width: 400px;
   padding: 30px;
@@ -92,7 +98,7 @@ header nav ul:hover :hover {
 }
 .container-form .contact-form h2 {
   color: #333;
-  font-size: 24px;
+  font-size: 20px;
   margin-bottom: 20px;
 }
 .container-form .form-group {
@@ -107,7 +113,7 @@ header nav ul:hover :hover {
 .container-form .form-group textarea {
   width: 100%;
   padding: 10px;
-  border: 1px solid #ccc;
+  border: none;
   border-radius: 5px;
 }
 .container-form .form-group textarea {
@@ -116,7 +122,7 @@ header nav ul:hover :hover {
 .container-form button {
   width: 100%;
   padding: 10px;
-  background-color: rgba(176, 136, 202, 0.555);
+  background-color: rgb(173, 132, 200);
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -124,22 +130,21 @@ header nav ul:hover :hover {
   transition: background-color 0.3s;
 }
 .container-form button:hover {
-  background-color: rgba(151, 251, 234, 0.279);
+  background-color: rgb(12, 204, 204);
 }
 
 @media screen and (min-width: 768px) {
   .container-form {
     flex-direction: row;
-    border: 1px solid red;
   }
   .container-form .text-form-wrapper {
     width: 100%;
   }
   .container-form .text-form-wrapper img {
-    max-width: 200px;
+    max-width: 260px;
   }
   .container-form .text-form-wrapper .content-text {
-    max-width: 200px;
+    max-width: 500px;
   }
   .container-form .contact-form {
     width: 50%;
@@ -170,7 +175,7 @@ a {
   align-items: center;
 }
 #reviews .review-heading h1 {
-  font-size: 2.2rem;
+  font-size: 1.7rem;
   font-weight: 500;
   background-color: lightblue;
   color: black;
@@ -180,7 +185,7 @@ a {
   font-size: 1.3rem;
   color: black;
   margin-bottom: 10px;
-  letter-spacing: 10px;
+  letter-spacing: 3px;
   text-transform: uppercase;
 }
 #reviews .review-box-container {
@@ -190,6 +195,7 @@ a {
   flex-wrap: wrap;
 }
 #reviews .review-box-container .review-box {
+  border-radius: 25px;
   min-width: 200px;
   max-width: 400px;
   box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.1);
@@ -249,7 +255,8 @@ a {
 
 .team {
   width: 100%;
-  height: 100vh;
+  margin-top: 70px;
+  margin-bottom: 50px;
 }
 
 .team-content {
@@ -274,16 +281,9 @@ a {
   width: 80%;
   max-width: 300px;
   padding: 16px;
-  background-color: rgba(176, 136, 202, 0.176);
+  background-color: rgba(12, 204, 204, 0.395);
   border-radius: 30px;
   transition: all 0.38s ease;
-}
-
-.box h3 {
-  font-size: 23px;
-  font-weight: 300;
-  color: #0f0f0f;
-  margin-bottom: 8px;
 }
 
 .box h5 {
@@ -375,13 +375,14 @@ body {
 .header nav ul li a {
   margin-left: 70px;
   text-decoration: none;
-  color: rgba(0, 0, 0, 0.838);
-  font-size: 18px;
+  color: rgb(255, 255, 255);
+  font-size: 15px;
+  font-weight: 500;
   line-height: 40px;
   transition: 0.3s ease-out;
 }
 .header nav ul:hover :hover {
-  color: rgba(151, 251, 234, 0.279);
+  color: #000000;
 }
 .header h1 {
   color: rgb(255, 255, 255);
@@ -409,7 +410,7 @@ body {
   font-weight: 300;
 }
 .header .button-1 {
-  background-color: rgba(176, 136, 202, 0.555);
+  background-color: rgba(12, 204, 204, 0.669);
   border-radius: 8px;
   border-style: none;
   color: rgb(255, 255, 255);
@@ -440,10 +441,13 @@ body {
   height: 100vh;
 }
 .om-oss .om-oss-title p {
-  color: rgba(0, 0, 0, 0.838);
-  font-size: 1.5rem;
   text-align: center;
-  padding-top: 25px;
+  color: rgba(0, 0, 0, 0.838);
+  font-size: 1.6rem;
+  padding-top: 40px;
+  padding-bottom: 20px;
+  font-weight: 400;
+  letter-spacing: 3px;
 }
 .om-oss .om-oss-wrapper {
   display: flex;
@@ -458,26 +462,27 @@ body {
   border-radius: 100px;
 }
 .om-oss .om-oss-wrapper .om-oss-text {
-  width: 70%;
+  width: 80%;
   max-width: 800px;
   margin: 0 auto;
+  background-color: rgba(173, 132, 200, 0.648);
+  border-radius: 25PX;
+  padding: 20px;
 }
 .om-oss .om-oss-wrapper .om-oss-text p {
   font-size: 0.9rem;
   text-align: left;
+  color: #393838;
 }
 
-.section-effect {
-  background-color: rgba(176, 136, 202, 0.555);
-  width: 100%;
-  height: 100px;
-}
-.section-effect .service-title p {
+.service-title p {
   text-align: center;
   color: rgba(0, 0, 0, 0.838);
-  font-size: 1.5rem;
-  padding-top: 25px;
+  font-size: 1.6rem;
+  margin-top: 120px;
+  margin-bottom: 40px;
   font-weight: 500;
+  letter-spacing: 3px;
 }
 
 .service-section {
